# finance-metrics-fetch

./: .gitignore  AGENTS.md  README.md  fetch_yahoo_historical.py  plot_history.py  pyproject.toml  spec.md
.github/workflows/: deploy-ui-reusable.yml  deploy-ui.yml  refresh-data.yml
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
config/: tickers.json
data/constituents/: nasdaq100.csv  sp500.csv
data/market/: GLD.csv  GOOGL.csv  INTC.csv  MSFT.csv  QQQ.csv  SLV.csv  VEA.csv  VIRT.csv  VOO.csv  ^VIX.csv
data/status/: latest.json
specs/001-config-market-fetch/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-market-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-simplify-market-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-simplify-chart-layout/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-scale-ticker-selection/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-unify-analytics-workspace/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-command-center-finder/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-hud-dashboard/: data-model.md  plan.md  quickstart.md  research.md  spec.md  (+1 more)
ui/: .gitignore  components.json  package-lock.json  package.json  svelte.config.js  vite.config.ts
(+87 files in other folders)
